# gpt-sovits-v2-pro-simple

./: .gitignore  README.md  api.py  example_api_call.py  example_call_api.py  pyproject.toml  webui.py  webui_full.py  webui_simple.py
server/: inference.py  lang_segmenter.py  mel_processing.py  models.py  textcut.py  tts.py  utils.py
server/ar/: embedding.py  sample.py  t2s_model.py  utils.py
server/ar/modules/: activation.py  scaling.py  transformer.py
server/eres2net/: ERes2NetV2.py  eres2netv2.py  kaldi.py  pooling_layers.py  sv.py
server/ext/: kernel.py  test_decode_next_token.py  test_process_prompt.py
server/ext/decode_next_token/: binding.cpp  kernel.cu
server/ext/process_prompt/: binding.cpp  kernel.cu
server/gpt_sovits/: models.py
server/gpt_sovits/f5_tts/: modules.py
server/gpt_sovits/module/: attentions.py  commons.py  core_vq.py  modules.py  mrte_model.py  quantize.py
server/text/: cantonese.py  chinese2.py  en_normalization.py  english.py  japanese.py  korean.py  text_cleaner.py  tone_sandhi.py
server/text/g2pw/: dataset.py  g2pw.py  onnx_api.py  utils.py
server/text/zh_normalization/: char_convert.py  chronology.py  num.py  text_normlization.py
src/: cnhubert.py  inference.py  lang_segmenter.py  mel_processing.py  symbols.py  textcut.py
src/ar/: t2s_model.py  utils.py
src/ar/modules/: activation.py  patched_mha_with_cache.py  transformer.py
src/eres2net/: kaldi.py
src/gpt_sovits/: models.py
src/gpt_sovits/f5_tts/: model.py
src/text/: cantonese.py  chinese2.py  english.py  korean.py  text_cleaner.py  tone_sandhi.py
(+6 files in other folders)
