[project]
name = "gpt-sovits-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "fast-langdetect>=1.0.0",
    "fastapi>=0.117.1",
    "faster-whisper>=1.2.0",
    "g2p-en>=2.1.0",
    "g2pk2>=0.0.3",
    "gradio>=5.47.2",
    "jamo>=0.4.1",
    "jieba>=0.42.1",
    "jieba-fast>=0.53",
    "ko-pron>=1.3",
    "librosa>=0.11.0",
    "numpy<2",
    "onnxruntime>=1.23.0; platform_machine == 'aarch64' or platform_machine == 'arm64'",
    "onnxruntime-gpu>=1.23.0; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
    "opencc>=1.1.9",
    "pyopenjtalk-plus>=0.4.1.post4",
    "pypinyin>=0.55.0",
    "python-mecab-ko>=1.3.7",
    "split-lang>=2.1.1",
    "tojyutping>=3.2.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
    "wordsegment>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
